# DataMD

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  ROADMAP.md  SYNTAX.md  TASK_LIST.md  TECH_SPEC.md  TODO.md  USE_CASES.md  _quarto.yml  chart_test.dmd  chart_test.html  datamd.lua  dev-requirements.txt  example.dmd  pyproject.toml  requirements.txt  simple_example.dmd  test_cli.dmd  test_cli.html  test_video.html  test_video_thumb_functionality.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: app_config.json
crates/datamd-cli/: Cargo.toml
crates/datamd-cli/src/: main.rs
crates/datamd-core/: Cargo.toml
crates/datamd-core/src/: config.rs  error.rs  lib.rs  logging.rs  security.rs
crates/datamd-core/tests/: config.rs  security.rs
data/: sales.csv
docs/: ADVANCED_USAGE.md  API_DOCUMENTATION.md  EXTENDING_SHORTCODES.md  IMPLEMENTATION_SUMMARY.md  LARGE_FILE_HANDLING_DESIGN.md  MIGRATION_FROM_PYTHON.md  MIGRATION_GUIDE.md  RUST_ARCHITECTURE.md  SYNTAX.md  TESTING_APPROACH.md  TEST_COVERAGE_GAP_ANALYSIS.md
examples/: business_intelligence.dmd  chart_example.dmd  comprehensive_example.dmd  example.dmd  indonesian_ocr_example.dmd  large_file_example.dmd  large_sample.csv  research_paper.dmd  streaming_example.dmd  technical_documentation.dmd  very_large_sample.csv  video_example.dmd
python_implementation/: __init__.py  cache.py  config.py  data_transform.py  datamd_ext.py  exceptions.py  process_dmd.py
scripts/: memory_profiling.py
specs/: PLANNING_SUMMARY.md  PRD.md  TASK_LIST.md
tests/: test_basic.py  test_cache.py  test_cache_integration.py  test_chart.py  test_chart_comprehensive.py  test_chart_integration.py  test_chart_integration_comprehensive.py  test_cli.py  test_config.py  test_config_integration.py  test_data_transform.py  test_data_transform_integration.py  test_input_sanitization.py  test_large_files.py  test_path_validation.py  test_pdf_table.py  test_pdf_table_comprehensive.py  test_pdf_table_integration.py  test_performance_benchmarks.py  test_streaming.py  test_video.dmd  test_video_thumb.py  test_video_thumb_comprehensive.py  test_video_thumb_functionality.py  test_video_thumb_integration.py
