[workspace]
members = [
    "crates/datamd-core",
    "crates/datamd-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["DataMD Contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
polars = { version = "0.35", features = ["lazy", "fmt", "serde"] }
