[package]
name = "datamd-cli"
version = "0.1.0"
edition = "2021"
authors = ["DataMD Contributors"]
license = "MIT"
description = "CLI for DataMD Rust implementation"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
datamd-core = { path = "../datamd-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
